# deeplearning-ai-fine-tuning-rl-for-llms

./: M1_G1_Inspecting_Finetuned_vs_Base_Model.ipynb  README.md  main.py  pyproject.toml
src/: step01_setup.py  step02_example_prompts.py  step03_process_prompts.py  step04_scoring.py  step05_gsm8k_dataset.py  step06_extract_number.py  step07_model_evaluation.py  step08_safety_setup.py  step09_parse_llama_guard.py  step10_safety_metrics.py  step11_safety_pipeline.py  step12_cleanup.py
utils/: utils.py
